--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
+  "homepage": "https://goyalvansh4.github.io/todolist",
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -10,6 +13,7 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "gh-pages": "^6.0.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
